temp-sculpt-dyntopo-hive-alloc: Add hive allocator
New "hive" based allocator for BMesh.  This allocator
internally moves elements between a distinct number of
"hives."  Each hive is a simple array with a freelist.

The idea is to seamlessly move elements around to maximize
memory coherence.

--- a/source/blender/blenlib/CMakeLists.txt
+++ b/source/blender/blenlib/CMakeLists.txt
@@ -249,6 +249,7 @@ set(SRC
   BLI_heap.h
   BLI_heap_simple.h
   BLI_heap_minmax.hh
+  BLI_hive_alloc.hh
   BLI_implicit_sharing.h
   BLI_implicit_sharing.hh
   BLI_implicit_sharing_ptr.hh
