--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -71,6 +71,8 @@ set(SRC
   intern/bmesh_delete.h
   intern/bmesh_edgeloop.c
   intern/bmesh_edgeloop.h
+  intern/bmesh_hive_alloc.cc
+  intern/bmesh_hive_alloc.h
   intern/bmesh_idmap.cc
   intern/bmesh_idmap.h
   intern/bmesh_inline.h
